--- a/src/app/shared/styles/common-styles.scss
+++ b/src/app/shared/styles/common-styles.scss
@@ -25,24 +25,13 @@ $error-color: crimson;
     margin-bottom: 5px;
   }
 
-  input {
+  input, select {
     width: 100%;
     height: 47px;
     padding: 10px;
     font-size: 1em;
     border: 1px solid #ccc;
     border-radius: 5px;
-  }
-
-  select {
-    width: 100%;
-    height: 47px;
-    padding: 10px;
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    cursor: pointer;
   }
 
   select option {
@@ -75,7 +64,7 @@ $error-color: crimson;
   }
 }
 
-/* List Pages*/
+/* List Pages */
 .search-field {
   width: 100%;
   margin-bottom: 20px;
@@ -106,7 +95,7 @@ $error-color: crimson;
 
       .element-name {
         font-size: 1.2em;
-        font-weight:600;
+        font-weight: 600;
       }
     }
 
@@ -259,7 +248,6 @@ body {
 /* Add media query for phone screens */
 /* Adjust the width and margin for the button on smaller screens */
 @media all and (max-width: 1000px) {
- 
   /* FORMULAR PAGES */
   .content-container {
     .form-grid {
@@ -270,6 +258,7 @@ body {
     .form-group {
       margin-bottom: 10px; /* Reduce margin for smaller screens */
     }
+
     .button-group {
       flex-direction: column;
       width: 100%;
