traduction de pages en francais

--- a/src/app/core/components/best-education-description/best-education-description.component.html
+++ b/src/app/core/components/best-education-description/best-education-description.component.html
@@ -3,8 +3,8 @@
       <img src="https://img.freepik.com/photos-gratuite/gens-plan-moyen-obtenant-leur-diplome_23-2148950544.jpg?w=826&t=st=1690632065~exp=1690632665~hmac=61e3ba12a1a27f50aa718255912221df0c98dac9d3ea1240ec5ac5133491c965" alt="Image alt text" />
     </div>
     <div class="text-container">
-        Our computer science school offers a comprehensive and up-to-date curriculum that encompasses a wide range of
-        subjects crucial to the field of computer science. Our courses are designed to provide you with a strong foundation
-        and keep pace with the rapidly evolving technology landscape.
+      Notre école d'informatique propose un programme complet et à jour qui englobe un large éventail de
+      matières cruciales pour le domaine de l'informatique. Nos cours sont conçus pour vous fournir une base solide
+      et suivre le rythme de l'évolution rapide du paysage technologique.
     </div>
   </div>
