--- a/src/app/core/components/forbidden/forbidden.component.html
+++ b/src/app/core/components/forbidden/forbidden.component.html
@@ -13,9 +13,9 @@
 			<div class="forbidden-content">
 				<h1>403 Forbidden</h1>
 				<p>
-					You don't have permission.
+					Vous n'avez pas la permission.
 				</p>
-				<button (click)="goBack()">Go to Home</button>
+				<button (click)="goBack()">Retour à la page d'accueil</button>
 			</div>
 		</div>
 	</body>
