--- a/src/app/core/components/home-admin-manager-profil/home-admin-manager-profil.component.html
+++ b/src/app/core/components/home-admin-manager-profil/home-admin-manager-profil.component.html
@@ -7,9 +7,9 @@
 					alt="Salles de classes">
 			</div>
 			<div class="card-details">
-				<h2>Manage Classrooms</h2>
+				<h2>Gérer les Salles de Classes</h2>
 				<p>
-					Efficiently organize and oversee all the classrooms in your educational institution, including scheduling, room allocation, and capacity management.
+					Organisez efficacement et surveillez toutes les salles de classes de votre établissement éducatif, y compris la planification, l'attribution des salles et la gestion des capacités.
 				</p>
 			</div>
 		</div>
@@ -20,9 +20,9 @@
 					alt="Étudiants">
 			</div>
 			<div class="card-details">
-				<h2>Manage Students</h2>
+				<h2>Gérer les Étudiants</h2>
 				<p>
-					Effectively handle student records, enrollment, attendance, and performance, empowering you to support and guide your students' academic journey.
+					Gérez efficacement les dossiers des étudiants, l'inscription, la présence et les performances, vous permettant ainsi de soutenir et de guider le parcours académique de vos étudiants.
 				</p>
 			</div>
 		</div>
@@ -33,9 +33,9 @@
 					alt="Notes">
 			</div>
 			<div class="card-details">
-				<h2>Manage Grades</h2>
+				<h2>Gérer les Notes</h2>
 				<p>
-					Effortlessly record, analyze, and manage students' academic performance, providing insights to foster growth and improvement.
+					Enregistrez, analysez et gérez facilement les performances académiques des étudiants, fournissant des informations pour favoriser la croissance et l'amélioration.
 				</p>
 			</div>
 		</div>
@@ -46,9 +46,9 @@
 					alt="Matières">
 			</div>
 			<div class="card-details">
-				<h2>Manage Subjects</h2>
+				<h2>Gérer les Matières</h2>
 				<p>
-					Efficiently control and organize the subjects taught in your institution, including curriculum management and assignment of teaching staff.
+					Contrôlez et organisez efficacement les matières enseignées dans votre établissement, y compris la gestion des programmes et l'attribution du personnel enseignant.
 				</p>
 			</div>
 		</div>
