--- a/src/app/core/components/top-computer-science-description/top-computer-science-description.component.html
+++ b/src/app/core/components/top-computer-science-description/top-computer-science-description.component.html
@@ -1,12 +1,9 @@
 <div class="qualified-faculty-container">
-    <div class="image-container">
-      <img src="https://img.freepik.com/photos-gratuite/concept-collage-html-css-personne_23-2150061972.jpg?w=740&t=st=1690632197~exp=1690632797~hmac=98128f2f52810580cece5cfd6d37f6ca6aabf4075422b6f30b0f3be1846ab396" alt="Image alt text" />
-    </div>
-    <div class="text-container">
-        At our computer science school, we take pride in our highly qualified and experienced faculty members. Our
-        professors are not only experts in the field, but they are also passionate about teaching and dedicated to helping
-        you reach your full potential. They bring real-world insights to the classroom, giving you a well-rounded
-        educational experience.
-    </div>
-  </div>
-  
+	<div class="image-container">
+		<img src="https://img.freepik.com/photos-gratuite/concept-collage-html-css-personne_23-2150061972.jpg?w=740&t=st=1690632197~exp=1690632797~hmac=98128f2f52810580cece5cfd6d37f6ca6aabf4075422b6f30b0f3be1846ab396"
+			alt="Image alt text">
+	</div>
+	<div class="text-container">
+		Dans notre école d'informatique, nous sommes fiers de notre corps professoral hautement qualifié et expérimenté. Nos professeurs ne sont pas seulement des experts dans le domaine, mais ils sont également passionnés par l'enseignement et dévoués à vous aider à atteindre votre plein potentiel. Ils apportent des connaissances du monde réel en classe, vous offrant une expérience éducative complète.
+	</div>
+</div>
