--- a/src/app/features/dashboard/components/home-page/home-page.component.html
+++ b/src/app/features/dashboard/components/home-page/home-page.component.html
@@ -15,29 +15,31 @@
 		<!-- Section Bannière -->
 		<section class="banner">
 			<h3>
-				GRADUATE SCHOOL OF COMPUTER SCIENCE
+				ÉCOLE SUPÉRIEURE D'INFORMATIQUE
 			</h3>
 			<h1>
-				<span class="color-title">YOUR</span>
-				CLASSROOM
+				Le bon choix pour 
+				<span class="color-title">VOTRE</span>
+				avenir
 			</h1>
-			<button>DISCOVER MORE</button>
+			<button>EN SAVOIR PLUS</button>
 		</section>
 
 		<!-- Section "Who We Are" -->
 		<section class="who-we-are-section"
 			id="who-we-are">
-			<h3 class="who-we-are-title">Who We Are?</h3>
+			<h3 class="who-we-are-title">Qui sommes-nous?</h3>
 
 			<div class="who-we-are-content">
 				<p>
-					At Yekola School, we understand the importance of practical experience in shaping successful technology professionals.
-				As part of our commitment to student success, we maintain strong industry connections, enabling us to offer
-				exceptional internship and hands-on project opportunities for our students.
+					À Yekola School, nous comprenons l'importance de l'expérience pratique dans la formation de professionnels de la technologie
+				réussis. Dans le cadre de notre engagement envers la réussite des étudiants, nous entretenons de solides liens
+				avec l'industrie, ce qui nous permet de proposer des stages exceptionnels et des opportunités de projets pratiques
+				pour nos étudiants.
 				</p>
 				<p>
-					Through these experiences, our students gain invaluable exposure to real-world challenges and emerging technologies,
-				preparing them to thrive in the dynamic and competitive IT landscape.
+					Grâce à ces expériences, nos étudiants acquièrent une précieuse exposition aux défis du monde réel et aux technologies émergentes,
+				ce qui les prépare à réussir dans le paysage dynamique et compétitif de l'informatique.
 				</p>
 			</div>
 		</section>
@@ -46,7 +48,7 @@
 		<section class="why-choose"
 			id="why-choose">
 			<h3>
-				Why choose Yekola School?
+				Pourquoi choisir Yekola School?
 			</h3>
 
 			<div class="reasons-container">
@@ -55,7 +57,7 @@
 					(click)="toggleReasonContent(reason1)"
 					class="reason">
 					<h4>
-						Comprehensive and Up-to-Date Curriculum
+						Programme complet et à jour
 					</h4>
 				</div>
 
@@ -63,7 +65,7 @@
 					(click)="toggleReasonContent(reason2)"
 					class="reason">
 					<h4>
-						Qualified and Experienced Faculty
+						Corps enseignant qualifié et expérimenté
 					</h4>
 				</div>
 
@@ -71,7 +73,7 @@
 					(click)="toggleReasonContent(reason3)"
 					class="reason">
 					<h4>
-						Internship and Hands-On Project Opportunities
+						Stages et opportunités de projets pratiques
 					</h4>
 				</div>
 			</div>
@@ -84,32 +86,32 @@
 				</ng-container>
 			</div>
 		</section>
-		
+
 		<!-- Section "Contacts" -->
 		<section class="contacts-section"
 			id="contacts">
 			<div class="contacts-header">
-				<h3 class="contacts-title">Contact Us</h3>
+				<h3 class="contacts-title">Contactez-nous</h3>
 			</div>
 
 			<div class="contacts-content">
 				<div class="contact-info">
 					<p>
-						Phone:
+						contact:
 						<a href="tel:+11234567890">+1 (123) 456-7890</a>
 					</p>
 				</div>
 				<div class="contact-info">
 					<p>
 						Email:
-						<a href="mailto:info@yekolaschool.com">
-							info@yekolaschool.com
+						<a href="mailto:laroseikitama@gmail.com">
+							laroseikitama@gmail.com
 						</a>
 					</p>
 				</div>
 				<div class="contact-info">
 					<p>
-						Address: 123 Main Street, City, Country
+						Address: 26 Rue Dantec, Dakar, Sénégal
 					</p>
 				</div>
 			</div>
