--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -26,7 +26,7 @@
 				<li class="nav-item">
 					<a [routerLink]="['/navigation/home']"
 						class="nav-link">
-						HOME
+						ACCUEIL
 					</a>
 				</li>
 
@@ -37,19 +37,19 @@
 						role="button"
 						data-bs-toggle="dropdown"
 						aria-expanded="false">
-						STUDENT
+						ETUDIANT
 					</a>
 					<ul class="dropdown-menu">
 						<li>
 							<a [routerLink]="['/navigation/students/create']"
 								class="dropdown-item">
-								CREATE A NEW
+								CRÉER UN NOUVEAU ETUDIANT
 							</a>
 						</li>
 						<li>
 							<a [routerLink]="['/navigation/students/list']"
 								class="dropdown-item">
-								SEE THE LIST
+								VOIR LA LISTE
 							</a>
 						</li>
 					</ul>
@@ -62,19 +62,19 @@
 						role="button"
 						data-bs-toggle="dropdown"
 						aria-expanded="false">
-						CLASS
+						CLASSES
 					</a>
 					<ul class="dropdown-menu">
 						<li>
 							<a [routerLink]="['/navigation/classrooms/create']"
 								class="dropdown-item">
-								CREATE A NEW
+								CRÉER UNE NOUVELLE CLASSE
 							</a>
 						</li>
 						<li>
 							<a [routerLink]="['/navigation/classrooms/list']"
 								class="dropdown-item">
-								SEE THE LIST
+								VOIR LA LISTE
 							</a>
 						</li>
 					</ul>
@@ -87,27 +87,27 @@
 						role="button"
 						data-bs-toggle="dropdown"
 						aria-expanded="false">
-						SUBJECT
+						MATIÈRES
 					</a>
 					<ul class="dropdown-menu">
 						<li>
 							<a [routerLink]="['/navigation/subjects/create']"
 								class="dropdown-item">
-								CREATE A NEW SUBJECT
+								CRÉER UNE NOUVELLE MATIÈRE
 							</a>
 						</li>
 
 						<li>
 							<a [routerLink]="['/navigation/subjects/add-to-classroom']"
 								class="dropdown-item">
-								ADD TO CLASSROOM
+								ATTRIBUER À UNE CLASSE
 							</a>
 						</li>
 
 						<li>
 							<a [routerLink]="['/navigation/subjects/list']"
 								class="dropdown-item">
-								SEE THE LIST
+								VOIR LA LISTE
 							</a>
 						</li>
 
@@ -121,20 +121,20 @@
 						role="button"
 						data-bs-toggle="dropdown"
 						aria-expanded="false">
-						GRADE
+						NOTES
 					</a>
 					<ul class="dropdown-menu">
 						<li>
 							<a [routerLink]="['/navigation/grades/create']"
 								class="dropdown-item">
-								CREATE A NEW GRADE
+								CRÉER UNE NOUVELLE NOTE
 							</a>
 						</li>
 
 						<li>
 							<a [routerLink]="['/navigation/grades/list']"
 								class="dropdown-item">
-								SEE THE LIST
+								VOIR LA LISTE
 							</a>
 						</li>
 
@@ -149,20 +149,20 @@
 						role="button"
 						data-bs-toggle="dropdown"
 						aria-expanded="false">
-						USER
+						UTILISATEUR
 					</a>
 					<ul class="dropdown-menu">
 						<li>
 							<a [routerLink]="['/navigation/users/create']"
 								class="dropdown-item">
-								CREATE A NEW USER
+								CRÉER UN NOUVEL UTILISATEUR
 							</a>
 						</li>
 
 						<li>
 							<a [routerLink]="['/navigation/users/list']"
 								class="dropdown-item">
-								SEE THE LIST
+								VOIR LA LISTE
 							</a>
 						</li>
 
@@ -185,13 +185,13 @@
 						<li>
 							<a (click)="logout()"
 								class="dropdown-item">
-								LOG OUT
+								DÉCONNEXION
 							</a>
 						</li>
 						<li>
 							<a [routerLink]="['/navigation/users/parameters']"
 								class="dropdown-item">
-								PARAMETERS
+								PARAMÈTRES
 							</a>
 						</li>
 					</ul>
