--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
 			data-bs-target="#navbarNav"
 			aria-controls="navbarNav"
 			aria-expanded="false"
-			aria-label="Toggle navigation">
+			aria-label="Basculer la navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
@@ -27,30 +27,30 @@
 				<li class="nav-item">
 					<a class="nav-link"
 						href="#">
-						HOME
+						ACCUEIL
 					</a>
 				</li>
 
-				<!-- Déroulant "About Us" -->
+				<!-- Déroulant "À propos de nous" -->
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle"
 						href="#"
 						role="button"
 						data-bs-toggle="dropdown"
 						aria-expanded="false">
-						ABOUT US
+						À PROPOS DE NOUS
 					</a>
 					<ul class="dropdown-menu">
 						<li>
 							<a class="dropdown-item"
-								href="#who-we-are">
-								WHO WE ARE ?
+								href="#qui-sommes-nous">
+								QUI SOMMES-NOUS ?
 							</a>
 						</li>
 						<li>
 							<a class="dropdown-item"
-								href="#why-choose">
-								WHY TO CHOOSE US ?
+								href="#pourquoi-choisir">
+								POURQUOI NOUS CHOISIR ?
 							</a>
 						</li>
 					</ul>
@@ -63,16 +63,16 @@
 				</li>
 			</ul>
 
-			<!-- Boutons "Log In" et "Sign Up" alignés à droite -->
+			<!-- Boutons "Connexion" et "Inscription" alignés à droite -->
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a [routerLink]="['/auth/login']"
 						class="nav-link">
-						LOG IN
+						CONNEXION
 					</a>
 				</li>
 				<!-- <li class="nav-item">
-            <a class="nav-link" [routerLink]="['auth/register']">SIGN UP</a>
+            <a class="nav-link" [routerLink]="['auth/register']">S'INSCRIRE</a>
           </li> -->
 			</ul>
 		</div>
