--- a/src/app/core/components/quality-meeting-description/quality-meeting-description.component.html
+++ b/src/app/core/components/quality-meeting-description/quality-meeting-description.component.html
@@ -1,11 +1,9 @@
 <div class="internship-opportunities-container">
-    <div class="image-container">
-      <img src="https://img.freepik.com/photos-gratuite/homme-affaires-africain-attrayant-dans-verres-costume-tenant-papiers_273609-9306.jpg?w=740&t=st=1690632314~exp=1690632914~hmac=4381f33b33fa114c2fc2b2dc38b709b5918b2472042cbc0f0f30d7a936107ed4" alt="Image alt text" />
-    </div>
-    <div class="text-container">
-        We believe that practical experience is vital to your success. That's why we provide internship and hands-on project
-        opportunities in collaboration with leading companies. Through these experiences, you'll gain valuable skills,
-        industry connections, and a competitive edge in the job market.
-    </div>
-  </div>
-  
+	<div class="image-container">
+		<img src="https://img.freepik.com/photos-gratuite/homme-affaires-africain-attrayant-dans-verres-costume-tenant-papiers_273609-9306.jpg?w=740&t=st=1690632314~exp=1690632914~hmac=4381f33b33fa114c2fc2b2dc38b709b5918b2472042cbc0f0f30d7a936107ed4"
+			alt="Image alt text">
+	</div>
+	<div class="text-container">
+		Nous croyons que l'expérience pratique est essentielle à votre réussite. C'est pourquoi nous proposons des stages et des opportunités de projets pratiques en collaboration avec des entreprises de premier plan. Grâce à ces expériences, vous acquérirez des compétences précieuses, des contacts dans l'industrie et un avantage concurrentiel sur le marché de l'emploi.
+	</div>
+</div>
