--- a/src/app/features/auth/components/login-page/login-page.component.html
+++ b/src/app/features/auth/components/login-page/login-page.component.html
@@ -15,10 +15,10 @@
 
 				<div class="login-description">
 					<h2>
-						Welcome to Yekola School
+						Bienvenue à Yekola School
 					</h2>
 					<p>
-						Welcome to our Computer School Management Website. We provide a comprehensive range of courses and educational programs in the field of computer science and information technology. Whether you are a beginner looking to learn the basics or an experienced professional seeking to advance your skills, our dedicated team of instructors is here to support your learning journey.
+						Bienvenue sur notre site Web de gestion de l'école d'informatique. Nous proposons une gamme complète de cours et de programmes éducatifs dans le domaine de l'informatique et de la technologie de l'information. Que vous soyez débutant cherchant à apprendre les bases ou professionnel expérimenté cherchant à perfectionner vos compétences, notre équipe dévouée d'instructeurs est là pour soutenir votre parcours d'apprentissage.
 					</p>
 				</div>
 
@@ -34,11 +34,11 @@
 
 							<div *ngIf="isInvalid(email)"
 								class="error-message">
-								<div *ngIf="isRequiredError(email)">Email is required.</div>
+								<div *ngIf="isRequiredError(email)">L'adresse email est obligatoire.</div>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="password">Password</label>
+							<label for="password">Mot de passe</label>
 							<input type="password"
 								id="password"
 								name="password"
@@ -47,11 +47,11 @@
 							<div *ngIf="isInvalid(password)"
 								class="error-message">
 								<div *ngIf="isRequiredError(password)">
-									Password is required.
+									Le mot de passe est obligatoire.
 								</div>
 							</div>
 						</div>
-						<button type="submit" appStyledButton>Log in</button>
+						<button type="submit" appStyledButton>Se connecter</button>
 					</form>
 				</div>
 
