--- a/src/app/features/student/components/student-show/student-show.component.html
+++ b/src/app/features/student/components/student-show/student-show.component.html
@@ -1,53 +1,58 @@
 <div class="details-container">
 	<div class="details-grid">
 		<div class="details-group">
-			<label for="name">Name:</label>
-			<p>{{ student.full_name }}</p>
+			<label for="name">Nom :</label>
+			<p>
+				{{ student.full_name }}
+			</p>
 		</div>
 		<div class="details-group">
-			<label for="date_of_birth">Date of Birth:</label>
+			<label for="date_of_birth">Date de naissance :</label>
 			<p>
 				{{ student.date_of_birth | date }}
 			</p>
 		</div>
 		<div class="details-group">
-			<label for="address">Address:</label>
+			<label for="address">Addresse :</label>
 			<p>
 				{{ student.address }}
 			</p>
 		</div>
 		<div class="details-group">
-			<label for="email">Email:</label>
+			<label for="email">Email :</label>
 			<p>{{ student.email }}</p>
 		</div>
 		<div class="details-group">
-			<label for="phone_number">Phone Number:</label>
+			<label for="phone_number">
+				Numéro de téléphone :
+			</label>
 			<p>
 				{{ student.phone_number }}
 			</p>
 		</div>
 		<div class="details-group">
-			<label for="registration_number">
-				Registration Number:
-			</label>
+			<label for="registration_number">Matricule :</label>
 			<p>
 				{{ student.registrationNumber }}
 			</p>
 		</div>
 		<div class="details-group">
-			<label for="classroom">Classroom:</label>
+			<label for="classroom">Salle de classe :</label>
 			<p>
 				{{ student.classroom.name}}
 			</p>
 		</div>
 		<div class="details-group">
-			<label for="classroom">Level:</label>
+			<label for="classroom">Niveau :</label>
 			<p>
 				{{ student.classroom.level}}
 			</p>
 		</div>
 	</div>
 	<div class="button-group">
-		<button (click)="goBack()" appStyledButton>Back To List</button>
+		<button (click)="goBack()"
+			appStyledButton>
+			Retourner à la liste
+		</button>
 	</div>
 </div>
