--- a/src/app/features/user/components/user-change-password/user-change-password.component.html
+++ b/src/app/features/user/components/user-change-password/user-change-password.component.html
@@ -5,7 +5,9 @@
 
 			<!-- New Password -->
 			<div class="form-group">
-				<label for="newPassword">New Password:</label>
+				<label for="newPassword">
+					Nouveau Mot de Passe :
+				</label>
 				<input formControlName="newPassword"
 					type="password"
 					id="newPassword"
@@ -14,17 +16,19 @@
 				<div *ngIf="isInvalid(newPassword)"
 					class="error-message">
 					<div *ngIf="isRequiredError(newPassword)">
-						New password is required.
+						Le nouveau mot de passe est requis.
 					</div>
 					<div *ngIf="isPatternError(newPassword)">
-						New password must be at least 6 characters long.
+						Le nouveau mot de passe doit comporter au moins 6 caractères.
 					</div>
 				</div>
 			</div>
 
 			<!-- Confirm Password -->
 			<div class="form-group">
-				<label for="confirmPassword">Confirm Password:</label>
+				<label for="confirmPassword">
+					Confirmer le Mot de Passe :
+				</label>
 				<input formControlName="confirmPassword"
 					type="password"
 					id="confirmPassword"
@@ -33,10 +37,10 @@
 				<div *ngIf="isInvalid(confirmPassword)"
 					class="error-message">
 					<div *ngIf="isRequiredError(confirmPassword)">
-						Confirm password is required.
+						La confirmation du mot de passe est requise.
 					</div>
 					<div *ngIf="isConfirmPasswordMismatchError(confirmPassword)">
-						Passwords do not match.
+						Les mots de passe ne correspondent pas.
 					</div>
 				</div>
 			</div>
@@ -46,7 +50,7 @@
 		<div class="button-group">
 			<button type="submit"
 				appStyledButton>
-				Update my password
+				Mettre à jour mon mot de passe
 			</button>
 		</div>
 
