--- a/src/app/features/user/components/user-list/user-list.component.html
+++ b/src/app/features/user/components/user-list/user-list.component.html
@@ -4,12 +4,14 @@
 		placeholder="Rechercher une classe">
 </mat-form-field>
 <p class="total-users">
-	Total Users: {{ totalUsers }}
+	Total d'utilisateurs : {{ totalUsers }}
 </p>
 
 <div class="page__content-data-list">
 	<ng-container *ngIf="totalUsers === 0">
-		<p class="no-matches-message">No matches found.</p>
+		<p class="no-matches-message">
+			Aucune correspondance trouvée.
+		</p>
 	</ng-container>
 	<div *ngFor="let user of dataSource.filteredData"
 		class="element-card">
@@ -18,10 +20,10 @@
 				{{ user.name | titlecase }}
 			</h3>
 			<p class="element-info">
-				Email: {{ user.email }}
+				Email : {{ user.email }}
 			</p>
 			<p class="element-info">
-				Role: {{ user.role }}
+				Rôle : {{ user.role }}
 			</p>
 		</div>
 		<div class="element-card-actions">
@@ -29,13 +31,13 @@
 			<button [routerLink]="['/navigation/users/edit',user.id]"
 				class="btn btn-edit">
 				<mat-icon>create</mat-icon>
-				<span class="hover-message">Edit</span>
+				<span class="hover-message">Modifier</span>
 			</button>
 
 			<button (click)="deleteUser(user.id)"
 				class="btn btn-delete">
 				<mat-icon>delete</mat-icon>
-				<span class="hover-message">Delete</span>
+				<span class="hover-message">Supprimer</span>
 			</button>
 		</div>
 	</div>
