--- a/src/app/features/user/components/user-parameters/user-parameters.component.html
+++ b/src/app/features/user/components/user-parameters/user-parameters.component.html
@@ -4,7 +4,7 @@
 
 			<!-- Name -->
 			<div class="form-group">
-				<label for="name">Name:</label>
+				<label for="name">Nom :</label>
 				<input [(ngModel)]="user.name"
 					type="text"
 					id="name"
@@ -13,7 +13,7 @@
 
 			<!-- Email -->
 			<div class="form-group">
-				<label for="email">Email:</label>
+				<label for="email">Email :</label>
 				<input [(ngModel)]="user.email"
 					type="email"
 					id="email"
@@ -25,11 +25,11 @@
 		<div class="button-group">
 			<button type="submit"
 				appStyledButton>
-				Update my profile
+				Mettre à jour mon profil
 			</button>
 			<button [routerLink]="['/navigation/users/change-password']"
 				appStyledButton>
-				I want change my password
+				Je souhaite changer mon mot de passe
 			</button>
 		</div>
 
